[package]
name = "bifrost"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]

[dependencies]
clap = "~2.32.0"
bitcoin = "~0.14.2"
strason = "0.4"
rgb = { git = "https://github.com/rgb-org/rgb.git", rev = "1a626e1edd61bf5bc836b8fac5469e4e0d6c3426" }

[dependencies.hyper]
version = "0.9.18"
default-features = false

[features]
default = []
ssl = ["hyper/ssl"]